Prevent flickering of button text when switching to GPU rendering

--- a/src/css/App.styl
+++ b/src/css/App.styl
@@ -39,6 +39,7 @@ for page, color in pages
     font-size 32px
     border-radius 0px
     border 0px transparent
+    will-change transform
     background rgb(255, 241, 254)
     box-shadow 2px 3px 2px 2px rgba(58, 58, 58, 0.3)
     outline none
